implement dependency management at ndi_class layer and normalize sql and fs dbs

--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -42,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gas = Document({ 'PV': 'nRT' })\n",
-    "db.add(gas)"
+    "doc = Document({'hello': 'world'}, type_='test_doc', name='og', experiment_id='1234')\n",
+    "db.add(doc)"
    ]
   },
   {
@@ -52,9 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "force = Document({ 'F' : 'ma'})\n",
-    "force.add_dependency({'gas': gas.id })\n",
-    "db.add(force)"
+    "force = Document({ 'F' : 'ma'}, 'equation', 'force', '1234')\n",
+    "doc.add_dependency(force)\n"
    ]
   },
   {
@@ -63,9 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = Document({'hello': 'world'})\n",
-    "doc.add_dependency({ 'force': force.id })\n",
-    "db.add(doc)"
+    "gas = Document({ 'PV': 'nRT' })\n",
+    "force.add_dependency(gas)"
    ]
   },
   {
@@ -83,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "'d97c072f6aa74266a211daa26c0956f2'"
+       "'763509ee441940b4b0849287ea8827a4'"
       ]
      },
      "execution_count": 7,
@@ -103,11 +101,13 @@
     {
      "data": {
       "text/plain": [
-       "{'_metadata': {'experiment_id': '',\n",
-       "  'version_depth': 0,\n",
+       "{'_metadata': {'name': '',\n",
+       "  'type': '',\n",
+       "  'experiment_id': '',\n",
        "  'parent_id': '',\n",
-       "  'asc_path': ''},\n",
-       " '_dependencies': {'force': 'e9f54509e4ac4f1f9768f293861c9929'},\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0},\n",
+       " '_dependencies': {'': '5d6ef36eae3e4557984e2bd91d2eda6e'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -137,11 +137,13 @@
     {
      "data": {
       "text/plain": [
-       "{'_metadata': {'experiment_id': '',\n",
-       "  'version_depth': 0,\n",
+       "{'_metadata': {'name': '',\n",
+       "  'type': '',\n",
+       "  'experiment_id': '',\n",
        "  'parent_id': '',\n",
-       "  'asc_path': ''},\n",
-       " '_dependencies': {'force': 'e9f54509e4ac4f1f9768f293861c9929'},\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0},\n",
+       " '_dependencies': {'': '5d6ef36eae3e4557984e2bd91d2eda6e'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -158,37 +160,55 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'SQL' object has no attribute 'get_dependencies'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-302277a9ca07>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dependencies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SQL' object has no attribute 'get_dependencies'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "db.get_dependencies(result)"
+    "result.get_dependencies()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'name': '',\n",
+       "  'type': '',\n",
+       "  'experiment_id': '',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0},\n",
+       " '_dependencies': {'': <ndi.document.Document at 0x102ec57c0>},\n",
+       " 'hello': 'world'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result.data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'force'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                    Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-5da5f03cebda>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'_dependencies'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'force'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'force'"
+     ]
+    }
+   ],
    "source": [
     "result.data['_dependencies']['force'].data"
    ]
@@ -199,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.get_dependencies(result.data['_dependencies']['force'])"
+    "result.data['_dependencies']['force'].get_dependencies()"
    ]
   },
   {
@@ -237,6 +257,15 @@
    "source": [
     "for result in db.find():\n",
     "    print(result.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "destroy_everything_in(db)"
    ]
   }
  ],
