--- a/example/Demo_FS_Document_Versions.ipynb
+++ b/example/Demo_FS_Document_Versions.ipynb
@@ -37,9 +37,21 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'63ab536f35bb4b41bc9f23c4b1beaf71'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "doc = Document({ 'subject': 'mouse' })"
+    "doc = Document({ 'subject': 'mouse' })\n",
+    "doc.id"
    ]
   },
   {
@@ -50,7 +62,12 @@
     {
      "data": {
       "text/plain": [
-       "{'experiment_id': '', 'version_depth': 0, 'parent_id': '', 'asc_path': ''}"
+       "{'name': '',\n",
+       " 'type': '',\n",
+       " 'experiment_id': '',\n",
+       " 'parent_id': '',\n",
+       " 'asc_path': '',\n",
+       " 'version_depth': 0}"
       ]
      },
      "execution_count": 5,
@@ -80,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'experiment_id': '', 'version_depth': 0, 'parent_id': '', 'asc_path': ''}, '_dependencies': {}, 'subject': 'mouse'}\n"
+      "{'_metadata': {'name': '', 'type': '', 'experiment_id': '', 'parent_id': '', 'asc_path': '', 'version_depth': 0}, '_dependencies': {}, 'subject': 'mouse'}\n"
      ]
     }
    ],
@@ -104,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.update(doc)"
+    "doc.save_updates()"
    ]
   },
   {
@@ -116,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'experiment_id': '', 'version_depth': 1, 'parent_id': '0879bd962b8d4b47921bac8800f3997c', 'asc_path': ',0879bd962b8d4b47921bac8800f3997c'}, '_dependencies': {}, 'subject': 'elephant'}\n"
+      "{'_metadata': {'name': '', 'type': '', 'experiment_id': '', 'parent_id': '63ab536f35bb4b41bc9f23c4b1beaf71', 'asc_path': ',63ab536f35bb4b41bc9f23c4b1beaf71', 'version_depth': 1}, '_dependencies': {}, 'subject': 'elephant'}\n"
      ]
     }
    ],
@@ -124,6 +141,32 @@
     "result = db.find_by_id(doc.id)\n",
     "print(result.data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc.data['subject'] = 'elephant'\n",
+    "doc.save_updates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
