remove old jupyter notebook

--- a/example/Demo_FS_Document_Versions.ipynb
+++ b/example/Demo_FS_Document_Versions.ipynb
@@ -41,7 +41,7 @@
     {
      "data": {
       "text/plain": [
-       "'63ab536f35bb4b41bc9f23c4b1beaf71'"
+       "'5af052a7c2be43b58050034d12da09d6'"
       ]
      },
      "execution_count": 4,
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': '', 'type': '', 'experiment_id': '', 'parent_id': '63ab536f35bb4b41bc9f23c4b1beaf71', 'asc_path': ',63ab536f35bb4b41bc9f23c4b1beaf71', 'version_depth': 1}, '_dependencies': {}, 'subject': 'elephant'}\n"
+      "{'_metadata': {'name': '', 'type': '', 'experiment_id': '', 'parent_id': '5af052a7c2be43b58050034d12da09d6', 'asc_path': ',5af052a7c2be43b58050034d12da09d6', 'version_depth': 1}, '_dependencies': {}, 'subject': 'elephant'}\n"
      ]
     }
    ],
@@ -144,21 +144,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc.data['subject'] = 'elephant'\n",
+    "doc.data['subject'] = 'elephants'\n",
     "doc.save_updates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'name': '',\n",
+       "  'type': '',\n",
+       "  'experiment_id': '',\n",
+       "  'parent_id': '2d9fe10a3a07404cb56556c7440a614e',\n",
+       "  'asc_path': ',2d9fe10a3a07404cb56556c7440a614e,5af052a7c2be43b58050034d12da09d6',\n",
+       "  'version_depth': 2},\n",
+       " '_dependencies': {},\n",
+       " 'subject': 'elephants'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "doc"
+    "doc.data"
    ]
   },
   {
