add version management at ndi_class layer; update jupyter notebook

--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gas = Document({ 'PV': 'nRT' })\n",
+    "gas = Document({ 'PV': 'nRT' }, 'equation', 'gas', '1234')\n",
     "force.add_dependency(gas)"
    ]
   },
@@ -81,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "'763509ee441940b4b0849287ea8827a4'"
+       "'9fca0a90bbbe49a3987d1b8686d89466'"
       ]
      },
      "execution_count": 7,
@@ -101,13 +101,13 @@
     {
      "data": {
       "text/plain": [
-       "{'_metadata': {'name': '',\n",
-       "  'type': '',\n",
-       "  'experiment_id': '',\n",
+       "{'_metadata': {'name': 'og',\n",
+       "  'type': 'test_doc',\n",
+       "  'experiment_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0},\n",
-       " '_dependencies': {'': '5d6ef36eae3e4557984e2bd91d2eda6e'},\n",
+       " '_dependencies': {'force': '799ba06e88aa4ea699b33fcab3bb57bc'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -137,13 +137,13 @@
     {
      "data": {
       "text/plain": [
-       "{'_metadata': {'name': '',\n",
-       "  'type': '',\n",
-       "  'experiment_id': '',\n",
+       "{'_metadata': {'name': 'og',\n",
+       "  'type': 'test_doc',\n",
+       "  'experiment_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0},\n",
-       " '_dependencies': {'': '5d6ef36eae3e4557984e2bd91d2eda6e'},\n",
+       " '_dependencies': {'force': '799ba06e88aa4ea699b33fcab3bb57bc'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -173,13 +173,13 @@
     {
      "data": {
       "text/plain": [
-       "{'_metadata': {'name': '',\n",
-       "  'type': '',\n",
-       "  'experiment_id': '',\n",
+       "{'_metadata': {'name': 'og',\n",
+       "  'type': 'test_doc',\n",
+       "  'experiment_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0},\n",
-       " '_dependencies': {'': <ndi.document.Document at 0x102ec57c0>},\n",
+       " '_dependencies': {'force': <ndi.document.Document at 0x10ad3fd90>},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -198,15 +198,21 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'force'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-5da5f03cebda>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'_dependencies'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'force'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 'force'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'name': 'force',\n",
+       "  'type': 'equation',\n",
+       "  'experiment_id': '1234',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0},\n",
+       " '_dependencies': {'': 'fc09401165184490b19cb87b0378a5ac'},\n",
+       " 'F': 'ma'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -215,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'gas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-8cea44825759>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'_dependencies'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'force'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'_dependencies'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'gas'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'gas'"
+     ]
+    }
+   ],
    "source": [
     "result.data['_dependencies']['force'].data['_dependencies']['gas'].data"
    ]
