enable queries on json data field

--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -81,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "'9fca0a90bbbe49a3987d1b8686d89466'"
+       "'08b2257b2dbd4eb48b5ca8f97a0178e1'"
       ]
      },
      "execution_count": 7,
@@ -106,8 +106,9 @@
        "  'experiment_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
-       "  'version_depth': 0},\n",
-       " '_dependencies': {'force': '799ba06e88aa4ea699b33fcab3bb57bc'},\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {'force': 'c9376f328f0348e1b8948e22198f2b82'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -142,8 +143,9 @@
        "  'experiment_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
-       "  'version_depth': 0},\n",
-       " '_dependencies': {'force': '799ba06e88aa4ea699b33fcab3bb57bc'},\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {'force': 'c9376f328f0348e1b8948e22198f2b82'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -160,7 +162,18 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'force': <ndi.document.Document at 0x1042be310>}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result.get_dependencies()"
    ]
@@ -178,8 +191,9 @@
        "  'experiment_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
-       "  'version_depth': 0},\n",
-       " '_dependencies': {'force': <ndi.document.Document at 0x10ad3fd90>},\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {'force': <ndi.document.Document at 0x1042be310>},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -205,8 +219,9 @@
        "  'experiment_id': '1234',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
-       "  'version_depth': 0},\n",
-       " '_dependencies': {'': 'fc09401165184490b19cb87b0378a5ac'},\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {'gas': '434c33dd9ba94efe92602fcd489ca54f'},\n",
        " 'F': 'ma'}"
       ]
      },
@@ -223,7 +238,18 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'gas': <ndi.document.Document at 0x10c7dfb20>}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result.data['_dependencies']['force'].get_dependencies()"
    ]
@@ -234,15 +260,22 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'gas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-8cea44825759>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'_dependencies'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'force'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'_dependencies'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'gas'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 'gas'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'name': 'gas',\n",
+       "  'type': 'equation',\n",
+       "  'experiment_id': '1234',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " 'PV': 'nRT'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -251,16 +284,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n",
+      "{'_metadata': {'name': 'force', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'gas': '434c33dd9ba94efe92602fcd489ca54f'}, 'F': 'ma'}\n"
+     ]
+    }
+   ],
    "source": [
-    "db.find()"
+    "results = db.find(Q('_metadata.type') == 'equation' )\n",
+    "for d in results:\n",
+    "    print(d.data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,9 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': 'c9376f328f0348e1b8948e22198f2b82'}, 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n"
+     ]
+    }
+   ],
    "source": [
     "for result in db.find():\n",
     "    print(result.data)"
@@ -279,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
