--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -47,6 +47,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -67,10 +72,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -81,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "'08b2257b2dbd4eb48b5ca8f97a0178e1'"
+       "'796edb15083c4d2d8caf2940912fffbf'"
       ]
      },
      "execution_count": 7,
@@ -108,7 +111,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': 'c9376f328f0348e1b8948e22198f2b82'},\n",
+       " '_dependencies': {'force': '5f82c192695c4d70ad60ee3d1dcae40e'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -125,7 +128,15 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "796edb15083c4d2d8caf2940912fffbf\n"
+     ]
+    }
+   ],
    "source": [
     "result = db.find_by_id(doc.id)"
    ]
@@ -145,7 +156,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': 'c9376f328f0348e1b8948e22198f2b82'},\n",
+       " '_dependencies': {'force': '5f82c192695c4d70ad60ee3d1dcae40e'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -164,9 +175,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5f82c192695c4d70ad60ee3d1dcae40e\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'force': <ndi.document.Document at 0x1042be310>}"
+       "{'force': <ndi.document.Document at 0x107434f10>}"
       ]
      },
      "execution_count": 11,
@@ -193,7 +211,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': <ndi.document.Document at 0x1042be310>},\n",
+       " '_dependencies': {'force': <ndi.document.Document at 0x107434f10>},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -221,7 +239,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'gas': '434c33dd9ba94efe92602fcd489ca54f'},\n",
+       " '_dependencies': {'gas': 'b350ab233bd840f0ac9150504ca77511'},\n",
        " 'F': 'ma'}"
       ]
      },
@@ -240,9 +258,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b350ab233bd840f0ac9150504ca77511\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'gas': <ndi.document.Document at 0x10c7dfb20>}"
+       "{'gas': <ndi.document.Document at 0x113a77430>}"
       ]
      },
      "execution_count": 14,
@@ -288,18 +313,23 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n",
-      "{'_metadata': {'name': 'force', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'gas': '434c33dd9ba94efe92602fcd489ca54f'}, 'F': 'ma'}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x113a77370>,\n",
+       " <ndi.document.Document at 0x113a77730>,\n",
+       " <ndi.document.Document at 0x1074346a0>,\n",
+       " <ndi.document.Document at 0x107434ac0>,\n",
+       " <ndi.document.Document at 0x109a72a90>,\n",
+       " <ndi.document.Document at 0x109a72af0>]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = db.find(Q('_metadata.type') == 'equation' )\n",
-    "for d in results:\n",
-    "    print(d.data)"
+    "db.find()"
    ]
   },
   {
@@ -320,7 +350,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': 'c9376f328f0348e1b8948e22198f2b82'}, 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'force', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'gas': 'c92ad98e797e4aa48ad49984617777bc'}, 'F': 'ma'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '5f82c192695c4d70ad60ee3d1dcae40e'}, 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '133f2a21438b4f59a59a6975e3f11a67'}, 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n",
       "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n"
      ]
     }
