separate NDI_Object from Flatbuffer_Object

--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "force = Document({ 'F' : 'ma'}, 'equation', 'force', '1234')\n",
+    "force = Document({ 'F' : 'ma'}, 'force', 'equation', '1234')\n",
     "doc.add_dependency(force)\n"
    ]
   },
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gas = Document({ 'PV': 'nRT' }, 'equation', 'gas', '1234')\n",
+    "gas = Document({ 'PV': 'nRT' }, 'gas', 'equation', '1234')\n",
     "force.add_dependency(gas)"
    ]
   },
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "'796edb15083c4d2d8caf2940912fffbf'"
+       "'a9a7f6659b0e4c7383bd5baaf868f5f5'"
       ]
      },
      "execution_count": 7,
@@ -111,7 +111,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': '5f82c192695c4d70ad60ee3d1dcae40e'},\n",
+       " '_dependencies': {'force': '4b4fb292c9d047f6ba831b3c6ea68829'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -128,15 +128,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "796edb15083c4d2d8caf2940912fffbf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = db.find_by_id(doc.id)"
    ]
@@ -156,7 +148,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': '5f82c192695c4d70ad60ee3d1dcae40e'},\n",
+       " '_dependencies': {'force': '4b4fb292c9d047f6ba831b3c6ea68829'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -175,16 +167,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5f82c192695c4d70ad60ee3d1dcae40e\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'force': <ndi.document.Document at 0x107434f10>}"
+       "{'force': <ndi.document.Document at 0x11c008ac0>}"
       ]
      },
      "execution_count": 11,
@@ -211,7 +196,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': <ndi.document.Document at 0x107434f10>},\n",
+       " '_dependencies': {'force': <ndi.document.Document at 0x11c008ac0>},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -239,7 +224,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'gas': 'b350ab233bd840f0ac9150504ca77511'},\n",
+       " '_dependencies': {'gas': '1c74f74490b4478f87513d4bb75cff64'},\n",
        " 'F': 'ma'}"
       ]
      },
@@ -258,16 +243,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b350ab233bd840f0ac9150504ca77511\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'gas': <ndi.document.Document at 0x113a77430>}"
+       "{'gas': <ndi.document.Document at 0x11c0082b0>}"
       ]
      },
      "execution_count": 14,
@@ -315,12 +293,15 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x113a77370>,\n",
-       " <ndi.document.Document at 0x113a77730>,\n",
-       " <ndi.document.Document at 0x1074346a0>,\n",
-       " <ndi.document.Document at 0x107434ac0>,\n",
-       " <ndi.document.Document at 0x109a72a90>,\n",
-       " <ndi.document.Document at 0x109a72af0>]"
+       "[<ndi.document.Document at 0x11c04d9d0>,\n",
+       " <ndi.document.Document at 0x11c04dc10>,\n",
+       " <ndi.document.Document at 0x11c04da00>,\n",
+       " <ndi.document.Document at 0x11c04db50>,\n",
+       " <ndi.document.Document at 0x11c04daf0>,\n",
+       " <ndi.document.Document at 0x11c04dd60>,\n",
+       " <ndi.document.Document at 0x11c04dca0>,\n",
+       " <ndi.document.Document at 0x11c04deb0>,\n",
+       " <ndi.document.Document at 0x11c04df10>]"
       ]
      },
      "execution_count": 16,
@@ -350,10 +331,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'force', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'gas': 'c92ad98e797e4aa48ad49984617777bc'}, 'F': 'ma'}\n",
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '5f82c192695c4d70ad60ee3d1dcae40e'}, 'hello': 'world'}\n",
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '133f2a21438b4f59a59a6975e3f11a67'}, 'hello': 'world'}\n",
-      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'equation': '639a274a43184915b5e538114402ae04'}, 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'equation', 'type': 'gas', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n",
+      "{'_metadata': {'name': 'equation', 'type': 'force', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'equation': '475cbad1fef24e72b369eae48aea6ba4'}, 'F': 'ma'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'equation': '5ec2b3303f1444dbb713bd2d991555b9'}, 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'equation', 'type': 'gas', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n",
+      "{'_metadata': {'name': 'equation', 'type': 'force', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'equation': '63d1df70787c401396e9e9c275dba71e'}, 'F': 'ma'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '4b4fb292c9d047f6ba831b3c6ea68829'}, 'hello': 'world'}\n",
       "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n"
      ]
     }
